--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@ body {
 }
 
 .container {
-  display: block;
-  height: 30px;
-  border: 1px solid yellow;
+  &__info {
+    display: block;
+    height: 30px;
+    border: 1px solid yellow;
+  }
 }
