Changed sass to css

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,8 @@ body {
   margin: 0 auto;
 }
 
-.container {
-  &__info {
-    display: block;
-    height: 30px;
-    border: 1px solid yellow;
-  }
+.container__info {
+  display: block;
+  height: 30px;
+  border: 1px solid yellow;
 }
