--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   margin: 0 auto;
 }
 
-.container__info {
+.container__info * {
   display: block;
   height: 30px;
   border: 1px solid yellow;
