--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,9 @@ body {
   margin: 0 auto;
 }
 
-.container__info > * {
-  display: block;
+.div > * {
+  display: flex;
+  flex-direction: column;
   height: 30px;
   border: 1px solid yellow;
 }
